@@ -3,13 +3,13 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.timeseries;
 
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.core.JsonToken;
-import com.google.common.collect.ImmutableMap;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -32,7 +32,8 @@ public class TimeSeriesMetadata {
     private final TimeSeriesIndex index;
 
     public TimeSeriesMetadata(String name, TimeSeriesDataType dataType, TimeSeriesIndex index) {
-        this(name, dataType, ImmutableMap.of(), index);
+        // The order of the Map.of() elements is not constant/predictable so we have to build an unmodifiableMap LinkedHashMap ourselves
+        this(name, dataType, Collections.unmodifiableMap(new LinkedHashMap<>()), index);
     }
 
     public TimeSeriesMetadata(String name, TimeSeriesDataType dataType, Map<String, String> tags, TimeSeriesIndex index) {
@@ -83,10 +84,10 @@ public class TimeSeriesMetadata {
         }
     }
 
-    private static class JsonParsingContext {
+    private static final class JsonParsingContext {
         private String name;
         private TimeSeriesDataType dataType;
-        private Map<String, String> tags = new LinkedHashMap<>();
+        private final Map<String, String> tags = new LinkedHashMap<>();
         private TimeSeriesIndex index;
         private boolean insideTags = false;
 
@@ -101,28 +102,16 @@ public class TimeSeriesMetadata {
             context.tags.put(fieldName, parser.nextTextValue());
         } else {
             switch (fieldName) {
-                case "metadata":
-                    break;
-                case "name":
-                    context.name = parser.nextTextValue();
-                    break;
-                case "dataType":
-                    context.dataType = TimeSeriesDataType.valueOf(parser.nextTextValue());
-                    break;
-                case "tags":
-                    context.insideTags = true;
-                    break;
-                case RegularTimeSeriesIndex.TYPE:
-                    context.index = RegularTimeSeriesIndex.parseJson(parser);
-                    break;
-                case IrregularTimeSeriesIndex.TYPE:
-                    context.index = IrregularTimeSeriesIndex.parseJson(parser);
-                    break;
-                case InfiniteTimeSeriesIndex.TYPE:
-                    context.index = InfiniteTimeSeriesIndex.parseJson(parser);
-                    break;
-                default:
-                    throw new IllegalStateException("Unexpected field name " + fieldName);
+                case "metadata" -> {
+                    // Do nothing
+                }
+                case "name" -> context.name = parser.nextTextValue();
+                case "dataType" -> context.dataType = TimeSeriesDataType.valueOf(parser.nextTextValue());
+                case "tags" -> context.insideTags = true;
+                case RegularTimeSeriesIndex.TYPE -> context.index = RegularTimeSeriesIndex.parseJson(parser);
+                case IrregularTimeSeriesIndex.TYPE -> context.index = IrregularTimeSeriesIndex.parseJson(parser);
+                case InfiniteTimeSeriesIndex.TYPE -> context.index = InfiniteTimeSeriesIndex.parseJson(parser);
+                default -> throw new IllegalStateException("Unexpected field name " + fieldName);
             }
         }
     }
@@ -133,15 +122,13 @@ public class TimeSeriesMetadata {
             JsonParsingContext context = new JsonParsingContext();
             while ((token = parser.nextToken()) != null) {
                 switch (token) {
-                    case FIELD_NAME:
-                        parseFieldName(parser, context);
-                        break;
-                    case END_ARRAY:
+                    case FIELD_NAME -> parseFieldName(parser, context);
+                    case END_ARRAY -> {
                         if (context.insideTags) {
                             context.insideTags = false;
                         }
-                        break;
-                    case END_OBJECT:
+                    }
+                    case END_OBJECT -> {
                         if (!context.insideTags) {
                             if (context.isComplete()) {
                                 return new TimeSeriesMetadata(context.name, context.dataType, context.tags, context.index);
@@ -149,9 +136,10 @@ public class TimeSeriesMetadata {
                                 throw new IllegalStateException("Incomplete time series metadata json");
                             }
                         }
-                        break;
-                    default:
-                        break;
+                    }
+                    default -> {
+                        // Do nothing
+                    }
                 }
             }
             throw new IllegalStateException("should not happen");
